<resources>
    <string name="app_name">FC Neftchi</string>
    <string name="my_team_name">Neftchi</string>
    <string name="title_home">Bosh sahifa</string>
    <string name="title_matches">O\'yinlar</string>
    <string name="title_news">Yangiliklar</string>
    <string name="title_team">Jamoa</string>
    <string name="title_videos">Videolar</string>
    <string name="title_more">Yana</string>
    <string name="title_statistics">Statistika</string>
    <string name="title_league_table">Turnir jadvali</string>
    <string name="title_club_history">Klub tarixi</string>
    <string name="title_socials">Ijtimoiy tarmoqlar</string>
    <string name="title_settings">Sozlamalar</string>
    <string name="home_latest_news">So\'nggi yangiliklar</string>
    <string name="home_league_table">Turnir jadvali</string>
    <string name="home_view_all">Barchasi</string>
    <string name="home_section_video">Video</string>
    <string name="home_section_recent_news">So\'nggi yangiliklar</string>
    <string name="home_section_table">Turnir jadvali</string>
    <string name="home_label_next_match">KEYINGI O\'YIN</string>
    <string name="home_label_last_result">OXIRGI NATIJA</string>
    <string name="countdown_days">KUN</string>
    <string name="countdown_hours">ST</string>
    <string name="countdown_minutes">MIN</string>
    <string name="countdown_seconds">SEK</string>
    <string name="could_not_open_video">Videoni ochib bo\'lmadi</string>
    <string name="matches_fixtures">Taqvim</string>
    <string name="matches_results">Natijalar</string>
    <string name="match_tab_fixtures">Taqvim</string>
    <string name="match_tab_results">Natijalar</string>
    <string name="match_tab_table">Jadval</string>
    <string name="match_tab_top_players">To\'purarlar</string>
    <string name="match_detail_tab_events">Voqealar</string>
    <string name="match_detail_tab_stats">Statistika</string>
    <string name="match_detail_tab_lineups">Tarkiblar</string>
    <string name="match_section_starting_lineups">Boshlang\'ich tarkiblar</string>
    <string name="match_section_statistics">O\'yin statistikasi</string>
    <string name="match_stat_shots">Zarbalar</string>
    <string name="match_stat_shots_on_target">Aniq zarbalar</string>
    <string name="match_stat_corners">Burchak zarbalari</string>
    <string name="match_stat_offsides">Offsayd</string>
    <string name="match_stat_fouls">Follar</string>
    <string name="match_stat_yellow_cards">Ogohlantirish</string>
    <string name="match_stat_red_cards">Chetlatish</string>
    <string name="date_unavailable">SANA MAVJUD EMAS</string>
    <string name="competition_superliga">Superliga</string>
    <string name="top_scorers">Eng yaxshi to\'purarlar</string>
    <string name="top_assisters">Eng yaxshi assistentlar</string>
    <string name="club_stats_section">Klub statistikasi</string>
    <string name="club_stats_wins">G\'ALABA</string>
    <string name="club_stats_draws">DURANG</string>
    <string name="club_stats_losses">MAG\'LUBIYAT</string>
    <string name="club_stats_matches">O\'yinlar</string>
    <string name="club_stats_goals_for">Urilgan gollar</string>
    <string name="club_stats_goals_against">O\'tkazilgan gollar</string>
    <string name="more_options">Qo\'shimcha</string>
    <string name="more_league_table">Turnir jadvali</string>
    <string name="more_club_history">Klub tarixi</string>
    <string name="more_stadium_info">Stadion haqida</string>
    <string name="more_tickets">Chiptalar</string>
    <string name="more_settings">Sozlamalar</string>
    <string name="more_team_staff">Jamoa va xodimlar</string>
    <string name="more_statistics">Statistika</string>
    <string name="more_history">Klub tarixi</string>
    <string name="more_stadium_label">Stadion</string>
    <string name="more_settings_label">Sozlamalar</string>
    <string name="more_socials">Ijtimoiy tarmoqlar</string>
    <string name="player_label_position">POZITSIYA</string>
    <string name="player_label_country">MAMLAKAT</string>
    <string name="player_label_age">YOSH</string>
    <string name="player_label_matches">MATCH</string>
    <string name="player_label_goals">GOL</string>
    <string name="player_label_assists">ASSIST</string>
    <string name="player_label_minutes">MINUT</string>
    <string name="player_label_yellow_cards">SARIQ K</string>
    <string name="player_label_red_cards">QIZIL K</string>
    <string name="player_section_current_season">Joriy mavsum statistikasi</string>
    <string name="player_unknown_value">N/A</string>
    <string name="player_career_header_club">Klub</string>
    <string name="player_career_header_season">Mavsum</string>
    <string name="player_career_header_matches">Match</string>
    <string name="player_career_header_goals">Gol</string>
    <string name="player_stats_header_player">O\'yinchi</string>
    <string name="player_stats_header_played">O</string>
    <string name="player_stats_header_goals">G</string>
    <string name="player_stats_header_assists">A</string>
    <string name="player_stats_header_yellow">S</string>
    <string name="player_stats_header_red">Q</string>
    <string name="league_table_header_club">Klub</string>
    <string name="league_table_header_played">O</string>
    <string name="league_table_header_wins">G</string>
    <string name="league_table_header_draws">D</string>
    <string name="league_table_header_losses">M</string>
    <string name="league_table_header_goal_difference">GF</string>
    <string name="league_table_header_points">OCH</string>
    <string name="position_goalkeeper">Darvozabon</string>
    <string name="position_defender">Himoyachi</string>
    <string name="position_midfielder">Yarim himoyachi</string>
    <string name="position_midfielder_short">Yarim H.</string>
    <string name="position_attacker">Hujumchi</string>
    <string name="position_unknown">Noma\'lum</string>
    <string name="position_group_suffix">LAR</string>
    <string name="title_stadium">Stadion</string>
    <string name="stadium_address">Farg\'ona shahri, Marg\'ilon ko\'chasi 1</string>
    <string name="stadium_label_capacity">SIG\'IM</string>
    <string name="stadium_label_opened">OCHILGAN</string>
    <string name="stadium_about_section">Stadion haqida</string>
    <string name="stadium_full_name">Istiqlol Stadioni</string>
    <string name="stadium_capacity_value">20,000</string>
    <string name="stadium_opened_year">2015</string>
    <string name="stadium_description">
        "Istiqlol" sport majmuasi Farg\'onada joylashgan bo\'lib, 20 mingdan ortiq muxlisni qabul qila oladi. Zamonaviy va barcha zarur narsalar bilan jihozlangan chiroyli stadion 2015-yilda ochilgan.\n\nU xalqaro futbol o\'yinlari uchun ideal maydonga aylandi. "Istiqlol" — "Neftchi" futbol klubining uy arenasi hisoblanadi. Tomoshabinlar uchun o\'rindiqlar yuqori va pastki qavatlarga bo\'lingan. Kuzatuvchilar xonasi videotablo va musobaqani jonli translyatsiya qilish imkonini beruvchi uskunalar bilan jihozlangan.
    </string>
    <string name="news_default_author">FC Neftchi tomonidan</string>
    <string name="news_share_title">Maqolani ulashish</string>
    <string name="news_share_message">FC Neftchi ilovasidagi ushbu maqolani ko\'rib chiqing: %1$s</string>
    <string name="news_load_failed">Yangiliklarni yuklab bo\'lmadi</string>
    <string name="news_article_empty">Ma\'lumot topilmadi.</string>
    <string name="social_telegram">Telegram</string>
    <string name="social_instagram">Instagram</string>
    <string name="social_youtube">YouTube</string>
    <string name="social_facebook">Facebook</string>
    <string name="video_category_main_team">Asosiy Jamoa</string>
    <string name="separator_bullet">|</string>
    <string name="separator_dash">-</string>
    <string name="permission_allow">Ruxsat berish</string>
    <string name="permission_later">Keyinroq</string>
    <string name="notif_permission_dialog_title">Yangiliklardan xabardor bo\'ling!</string>
    <string name="notif_permission_dialog_message">Telefoningizda jonli o\'yin natijalari, so\'nggi yangiliklar va video yangilanishlarni olish uchun bildirishnomalarga ruxsat bering.</string>
    <string name="notif_default_title">FC Neftchi</string>
    <string name="value_unavailable">N/A</string>
    <string name="score_format" translatable="false">%1$s - %2$s</string>
    <string name="placeholder_duration" translatable="false">00:00:00</string>
    <string name="notif_default_body">Yangi xabar</string>
    <string name="notif_channel_name">Neftchi bildirishnomalari</string>
    <string name="notif_channel_description">Yangi yangiliklar va o\'yin eslatmalari</string>
    <string name="settings_appearance">Ko\'rinish</string>
    <string name="settings_dark_mode">Tungi rejim</string>
    <string name="settings_theme">Mavzu</string>
    <string name="settings_theme_light">Kunduzgi</string>
    <string name="settings_theme_dark">Tungi</string>
    <string name="settings_theme_system">Tizim bo\'yicha</string>
    <string name="settings_theme_subtitle">Dasturning ko\'rinishini tanlang</string>
    <string name="settings_notifications">Bildirishnomalar</string>
    <string name="notif_category_goals">Gollar</string>
    <string name="notif_category_goals_subtitle">O\'yin paytida urilgan gollar haqida darhol xabar oling</string>
    <string name="notif_category_kickoff">O\'yin boshlanishi</string>
    <string name="notif_category_kickoff_subtitle">O\'yin boshlanishidan oldin eslatma oling</string>
    <string name="notif_category_news">Yangiliklar</string>
    <string name="notif_category_news_subtitle">Klub haqida so\'nggi yangiliklarni kuzating</string>
    <string name="notif_category_signings">Transferlar</string>
    <string name="notif_category_signings_subtitle">Yangi futbolchilar va transferlar haqida xabardor bo\'ling</string>
    <string name="notif_permission_granted">Bildirishnomalar yoqildi!</string>
    <string name="notif_permission_denied">Bildirishnomalarga ruxsat berilmadi.</string>
    <string name="notif_subscribe_success">Obuna muvaffaqiyatli!</string>
    <string name="notif_subscribe_failed">Obuna bo\'lishda xatolik.</string>
    <string name="notif_unsubscribe_success">Obuna bekor qilindi!</string>
    <string name="notif_unsubscribe_failed">Bekor qilishda xatolik.</string>
    <string name="history_section_overview">Neftchi\'ning shonli tarixi</string>
    <string name="history_subsection_soviet_era">Dastlabki sovet davri</string>
    <string name="history_paragraph_soviet_era">"Neftchi" futbol klubiga &lt;b&gt;1962-yilda&lt;/b&gt; Farg\'ona shahrida "Neftyanik" nomi bilan asos solingan. 1962-yildan 1991-yilgacha jamoa Sovet Ittifoqining Ikkinchi ligasida (O\'rta Osiyo divizioni) ishtirok etgan. 1990-yilda klub Ikkinchi liganing "Sharq" konferensiyasida g\'olib chiqib, Sovet Birinchi ligasiga yo\'l oladi. 1991-yilgi mavsumda Birinchi ligada 7-o\'rinni egallashi klubning sovet futboli tarixidagi eng yuqori yutug\'i bo\'lib qoldi.</string>
    <string name="history_subsection_independence_era">Mustaqillik davri (Oltin davr)</string>
    <string name="state_retry">Qayta urinish</string>
    <string name="state_error_title">Nimadir noto\'g\'ri ketdi</string>
    <string name="state_error_message">Ma\'lumotlarni yuklab bo\'lmadi. Iltimos, keyinroq qayta urinib ko\'ring.</string>
    <string name="cd_state_icon">Holat ikonkasi</string>
    <string name="shortcut_matches_short">O\'yinlar</string>
    <string name="shortcut_matches_long">Keyingi o\'yin</string>
    <string name="shortcut_table_short">Jadval</string>
    <string name="shortcut_table_long">Turnir jadvali</string>
    <string name="shortcut_news_short">Yangiliklar</string>
    <string name="shortcut_news_long">So\'nggi yangiliklar</string>
</resources>