<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/matchesFragment"
        android:icon="@drawable/ic_matches"
        android:title="@string/title_matches" />
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />
    <!-- CHANGE teamFragment to videosFragment -->
    <item
        android:id="@+id/videosFragment"
        android:icon="@drawable/ic_videos"
        android:title="@string/title_videos" />
    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu>