<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.socials.SocialsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/telegram_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/social_telegram"
        app:icon="@drawable/ic_telegram"
        app:iconGravity="textStart"
        app:iconPadding="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/instagram_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:text="@string/social_instagram"
        app:icon="@drawable/ic_instagram"
        app:iconGravity="textStart"
        app:iconPadding="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/youtube_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:text="@string/social_youtube"
        app:icon="@drawable/ic_youtube"
        app:iconGravity="textStart"
        app:iconPadding="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:text="@string/social_facebook"
        app:icon="@drawable/ic_facebook"
        app:iconGravity="textStart"
        app:iconPadding="16dp" />

</LinearLayout>
